--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <html>
   <head>  
-    <meta http-equiv="refresh" content="0; url=https://perspectives-ws.github.io/perspectives21.github.io/" />
+    <meta http-equiv="refresh" content="0; url=https://perspectives-ws.github.io/2021/" />
   </head>
 </html>
